# wifios

./: .gitignore  README.md  package-lock.json  package.json
admin-panel/: dashboard.html  dashboard.js
backend/: analytics.js  auth.js  db.js  dns-server.js  firewall.js  mac-engine.js  mac-randomization.js  network-tuning.js  payment.js  qr.js  receipt.js  scheduler.js  server.js  voucher.js  watchdog.js
config/: pricing.json  system.json
db/: schema.sql  wifi.db-shm  wifi.db-wal
frontend/: change-password.html  login.html  portal.html
reconciler/: Cargo.toml  config.toml
reconciler/src/: config.rs  main.rs  reconciler.rs  state_store.rs  sysctl.rs  watchdog.rs
scripts/: firewall.ps1  init-db.js  install.ps1  starlink_healthcheck.sh  start.ps1
tests/: atomic-persistence.test.js  mac-randomization.test.js  watchdog.test.js
